--- a/SimpleLocationWeb/Pages/Admin/Categories/Delete.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Categories/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model SimpleLocationWeb.Pages.Categories.DeleteModel
+@model SimpleLocationWeb.Pages.Admin.Categories.DeleteModel
 
 <form method="post">
     <input hidden asp-for="Category.Id" />
