--- a/SimpleLocationWeb/wwwroot/css/site.css
+++ b/SimpleLocationWeb/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-html {
+/*html {
   font-size: 14px;
 }
 
@@ -16,7 +16,4 @@ html {
 body {
   margin-bottom: 60px;
 }
-
-footer{
-    background-color: black;
-}
+*/
