--- a/SimpleLocationWeb/Pages/Admin/CarBrands/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/CarBrands/Index.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
-@model SimpleLocationWeb.Pages.Admin.CarTypes.IndexModel
+@model SimpleLocationWeb.Pages.Admin.CarBrands.IndexModel
 
 
 
  <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">CarType List</h2>
+            <h2 class="text-primary">CarBrand List</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-page="create" class="btn btn-primary">
-                <i class="bi bi-pencil-square"></i> &nbsp;Create New CarType
+                <i class="bi bi-pencil-square"></i> &nbsp;Create New CarBrand
             </a>
         </div>
     </div>
@@ -20,12 +20,12 @@
         <thead>
             <tr>
                 <th>
-                    CarType Name
+                    CarBrand Name
                 </th>  
             </tr>
         </thead>
         <tbody>
-            @foreach(var obj in Model.CarTypes)
+            @foreach (var obj in Model.CarBrands)
             {
                 <tr>
                     <td width="50%">@obj.Name</td>
