--- a/SimpleLocationWeb/Pages/Admin/Cars/Index.cshtml
+++ b/SimpleLocationWeb/Pages/Admin/Cars/Index.cshtml
@@ -1,14 +1,16 @@
 ﻿@page
-@model SimpleLocationWeb.Pages.Admin.MenuItems.IndexModel
+@model SimpleLocationWeb.Pages.Admin.Cars.IndexModel
 
-<div class="container p-3">
+
+
+ <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Menu Item List</h2>
+            <h2 class="text-primary">Car List</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-page="upsert" class="btn btn-primary">
-                <i class="bi bi-pencil-square"></i> &nbsp;Create New Menu Item
+                <i class="bi bi-pencil-square"></i> &nbsp;Create New Car
             </a>
         </div>
     </div>
@@ -20,7 +22,7 @@
                 <th>Name</th>
                 <th>Price</th>
                 <th>Category</th>
-                <th>Car Type</th>
+                <th>Car Brand</th>
                 <th></th>
             </tr>
         </thead>
@@ -28,5 +30,6 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/menuItem.js"></script>
+    <script src="~/js/car.js"></script>
 }
+
