--- a/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
                           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
                           <div class="dropdown-menu">
                               <a class="dropdown-item" asp-area="" asp-page="/Admin/Categories/Index">Categories</a>
-                              <a class="dropdown-item" asp-area="" asp-page="/Admin/CarTypes/Index">Car Types</a>
-                                <a class="dropdown-item" asp-area="" asp-page="/Admin/MenuItems/Index">Menu Items</a>
+                              <a class="dropdown-item" asp-area="" asp-page="/Admin/CarBrands/Index">Car Brands</a>
+                              <a class="dropdown-item" asp-area="" asp-page="/Admin/Cars/Index">Cars</a>
                               <div class="dropdown-divider"></div>
                           </div>
                         </li>
@@ -58,6 +58,9 @@
     <script src="https://cdn.tiny.cloud/1/0l503100yvumt9sexy6dvqvagea9k11dbabwaqw02f3hka75/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+
 
     @await RenderSectionAsync("Scripts", required: false)
 
