--- a/SimpleLocationWeb/wwwroot/css/site.css
+++ b/SimpleLocationWeb/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
@@ -9,12 +9,18 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+   
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
+
+footer{
+    height: 40px;
+}
+
 
