Creation des classes OrderHeader et OrderDetails et des tables attitré dans la bdd

--- a/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick Date</label>
+                                        <label>Pick Up Date</label>
                                     </div>
                                     <div class="col-9">
                                         <input type="date" class="form-control" />
@@ -51,7 +51,23 @@
                                 </div>
                                 <div class="row my-1">
                                     <div class="col-3">
-                                        <label>Pick Time</label>
+                                        <label>Pick up Time</label>
+                                    </div>
+                                    <div class="col-9">
+                                        <input type="time" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">
+                                        <label>Pick Date Of Return</label>
+                                    </div>
+                                    <div class="col-9">
+                                        <input type="date" class="form-control" />
+                                    </div>
+                                </div>
+                                <div class="row my-1">
+                                    <div class="col-3">
+                                        <label>Pick Time Of Return</label>
                                     </div>
                                     <div class="col-9">
                                         <input type="time" class="form-control" />
