--- a/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
+++ b/SimpleLocationWeb/Pages/Customer/Cart/Summary.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
+@using Microsoft.Extensions.Options
 @model SimpleLocationWeb.Pages.Customer.Cart.SummaryModel
+@inject IOptions<SimpleLocation.Utility.StripeSettings> Stripe
 
 <form method="post">
     <br />
@@ -12,7 +14,7 @@
                             <h3 class="text-white-50">Order Summary</h3>
                         </div>
                         <div class="col-6 text-end">
-                            <a class="btn btn-outline-info btn-sm">Back to Cart</a>
+                            <a asp-page="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
                         </div>
                     </div>
                 </div>
@@ -25,12 +27,14 @@
                                         <span class="text-info">Pickup Details:</span>
                                     </h4>
                                 </div>
+                                <div asp-validation-summary="All"></div>
                                 <div class="row my-1">
                                     <div class="col-3">
                                         <label>Name</label>
                                     </div>
                                     <div class="col-9">
-                                        <input class="form-control"/>
+                                        <input asp-for="OrderHeader.PickupName" class="form-control"/>
+                                        <span asp-validation-for="OrderHeader.PickupName" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -38,7 +42,8 @@
                                         <label>Phone Number</label>
                                     </div>
                                     <div class="col-9">
-                                        <input class="form-control" />
+                                        <input asp-for="OrderHeader.PhoneNumber" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -46,7 +51,8 @@
                                         <label>Pick Up Date</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="date" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickUpDate" type="date" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickUpDate" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -54,7 +60,8 @@
                                         <label>Pick up Time</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="time" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickUpTime" type="time" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickUpTime" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -62,7 +69,8 @@
                                         <label>Pick Date Of Return</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="date" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickDateOfReturn" type="date" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickDateOfReturn" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -70,7 +78,8 @@
                                         <label>Pick Time Of Return</label>
                                     </div>
                                     <div class="col-9">
-                                        <input type="time" class="form-control" />
+                                        <input value="" asp-for="OrderHeader.PickTimeOfReturn" type="time" class="form-control" />
+                                        <span asp-validation-for="OrderHeader.PickTimeOfReturn" class="text-danger"></span>
                                     </div>
                                 </div>
                                 <div class="row my-1">
@@ -78,7 +87,7 @@
                                         <label>Additional Instruction:</label>
                                     </div>
                                     <div class="col-9">
-                                        <textarea style="height:100px;" class="form-control"></textarea>
+                                        <textarea asp-for="OrderHeader.Comments" style="height:100px;" class="form-control"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -88,17 +97,19 @@
                                     <span class="text-info">Order Summary:</span>
                                 </h4>
                                 <ul class="list-group mb-3">
-                                    <li class="list-group-item d-flex justify-content-between">
-                                        <div>
-                                            <h6 class="my-0">Name</h6>
-                                            <small class="text-muted">Quantity: Count</small>
-                                        </div>
-                                        <span class="text-muted">$Price * Count</span>
-                                    </li>
+                                    @foreach(var detail in Model.LocationCarCartList){
+                                        <li class="list-group-item d-flex justify-content-between">
+                                            <div>
+                                                <h6 class="my-0">@detail.Car.Name</h6>
+                                                <small class="text-muted">Quantity: @detail.Count</small>
+                                            </div>
+                                            <span class="text-muted">@(detail.Car.Price * @detail.Count)</span>
+                                        </li>
+                                    }
                                     <li class="list-group-item d-flex justify-content-between bg-light">
                                         <div>
-                                            <small class="text-muted">Quantity: Count</small>
-                                            <strong class="text-info">$</strong>
+                                            <small class="text-muted">Total (USD)</small>
+                                            <strong class="text-info">$@Model.OrderHeader.OrderTotal</strong>
                                         </div>
                                     </li>
                                 </ul>
@@ -117,3 +128,12 @@
         </div>
     </div>
 </form>
+
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
+
+
