Mise en place des rôles Manager et Customer avec leurs droits d'acces respectives

--- a/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
@@ -25,20 +25,8 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
-                          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Admin</a>
-                          <div class="dropdown-menu">
-                              <a class="dropdown-item" asp-area="" asp-page="/Admin/Categories/Index">Categories</a>
-                              <a class="dropdown-item" asp-area="" asp-page="/Admin/CarBrands/Index">Car Brands</a>
-                              <a class="dropdown-item" asp-area="" asp-page="/Admin/Cars/Index">Cars</a>
-                              <div class="dropdown-divider"></div>
-                          </div>
-                        </li>
-                        <li>
-                            <a class="nav-link text-white-50" asp-area="" asp-page="/Customer/Cart/Index">
-                                <i class="bi bi-cart"></i>
-                            </a>
-                        </li>
+                        <partial name="_AdminDropdownPartial" />
+                        <partial name="_CustomerItemsPartial" />
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
