--- a/SimpleLocationWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/SimpleLocationWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -2,7 +2,14 @@
 @model RegisterModel
 @using SimpleLocation.Utility
 @{
-    ViewData["Title"] = "Register";
+    if (User.IsInRole("Manager"))
+    {
+    }
+    else
+    {
+        ViewData["Title"] = "Register";
+    }
+    
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -10,7 +17,17 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            @{
+                if(User.IsInRole("Manager"))
+                {
+                    <h2>Create a new user.</h2>
+
+                }
+                else
+                {
+                    <h2>Create a new account.</h2>
+                }
+            }
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating my-2">
@@ -43,41 +60,71 @@
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <div class="form-floating my-2">
-                <input type="radio" name="rdUserRole" value="@SD.ManagerRole" />@SD.ManagerRole
-                <input type="radio" name="rdUserRole" value="@SD.EmployeeRole" />@SD.EmployeeRole
-                <input type="radio" name="rdUserRole" value="@SD.FrontDeskRole" />@SD.FrontDeskRole
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
             @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                if (User.IsInRole("Manager"))
                 {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
+                    <div class="form-floating my-2">
+                        <input type="radio" name="rdUserRole" value="@SD.ManagerRole" />@SD.ManagerRole
+                        <input type="radio" name="rdUserRole" value="@SD.EmployeeRole" />@SD.EmployeeRole
+                        <input type="radio" name="rdUserRole" value="@SD.FrontDeskRole" />@SD.FrontDeskRole
                     </div>
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    
+                }
+            }
+            
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            @{
+                if (User.IsInRole("Manager"))
+                {
+                    <a asp-page="../Admin/Users/Index" class="btn btn-secondary">Back to List</a>
+                }
+            }
+        </form>
+    </div>
+    <div class="col-md-6 col-md-offset-2">
+        <section>
+            
+            @{
+                if (User.IsInRole("Manager"))
+                {
+
+
+                }
+                else
+                {
+                    <h3>Use another service to register.</h3>
+                    <hr />
+                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                    {
                         <div>
                             <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
+                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                    article
+                                    about setting up this ASP.NET application to support logging in via external services
+                                </a>.
                             </p>
                         </div>
-                    </form>
+                    }
+                    else
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins!)
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    }
+                                </p>
+                            </div>
+                        </form>
+                    }
                 }
+
+
+               
             }
         </section>
     </div>
