--- a/SimpleLocationWeb/Pages/Shared/_LoginPartial.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_LoginPartial.cshtml
@@ -11,17 +11,17 @@
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
+            <button id="logout" type="submit" class="nav-link btn btn-link"><i class="bi bi-box-arrow-left iconHeader"></i></button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register"><i class="bi bi-person-vcard iconHeader"></i></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login"><i class="bi bi-box-arrow-in-right iconHeader"></i></a>
     </li>
 }
 </ul>
