--- a/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
+++ b/SimpleLocationWeb/Pages/Shared/_Layout.cshtml
@@ -15,16 +15,16 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">SimpleLocationWeb</a>
+                @*<a class="navbar-brand" asp-area="" asp-page="/Index">SimpleLocationWeb</a>*@
+                <a asp-page="/Index" class="container_logo">
+                    <img src="/images/website/logo.svg" class="logo" />
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-page="/Index"><i class="bi bi-house-fill iconHeader"></i></a>
-                        </li>
                         <partial name="_AdminDropdownPartial" />
                         <partial name="_CustomerItemsPartial" />
                     </ul>
